objects/Team_Role__c.object
<CustomObject>
    <description>This object holds the Role definitions. Each Role is associated with a business owner largely considered responsible for assigning and analyzing the use of that Role in SAs.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignment Roles</relationshipLabel>
        <relationshipName>Staff_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>Cn{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentivized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incentivized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20150908-9224.</description>
        <label>Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20150908-9224.</description>
        <label>Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20150908-9224</description>
        <label>Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20150908-9224.</description>
        <label>Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20150908-9224.</description>
        <label>Solutions</label>
        <type>Checkbox</type>
    </fields>
    <label>Assignment Role</label>
    <listViews>
        <fullName>Active_All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Incentivized__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active - All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inactive_All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Incentivized__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive - All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Roles</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>